<resources>
    <string name="app_name">LazyCards</string>
    <string name="success">Success!</string>

    <!-- SupportActionToolBar Titles -->
    <string name="home">Home</string>
    <string name="queue">Queue</string>
    <string name="network_scanner">Network Scanner</string>

    <!-- Nav Drawer -->
    <string name="nav_home_fragment">Home</string>
    <string name="nav_queued">Queued</string>
    <string name="nav_network_scanner">Network Scanner</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>

    <!-- For MainFragment -->
    <string name="card_vocab_hint">Enter your vocab word</string>
    <string name="back_card_note">Extra content for the back</string>
    <string name="tags">Tags</string>
    <string name="submit_button">Submit</string>
    <string name="get_decks_button">Get Decks</string>
    <string name="options_button">Options</string>
    <string name="no_deck_selected">No Deck Selected</string>
    <string name="no_decks">There are no decks, press "Get Decks"</string>
    <string name="updated_deck_list">Updated Deck List</string>
    <string name="checkbox_send_to_queue">Send to queue instead</string>
    <string name="no_word_toast">Please enter a word for submission</string>

    <!-- QueuedCardFragment -->
    <string name="submit_all_button">Submit All</string>


    <!-- For NetworkScannerActivity -->
    <string name="host_not_set_text">No host has been selected </string>
    <string name="change_host_text">Change host IP</string>
    <string name="change_port_text">Change port</string>
    <string name="rescan_text">Rescan</string>


    <!-- Host Model -->
    <string name="host_label">Host</string>

    <!-- Queued Card Model -->
    <string name="queued_api_set_text">API:  </string>
    <string name="queued_deck_select">Deck:  </string>

    <!-- HostSelectDialog -->
    <string name="host_select_title">Host Selection</string>
    <string name="host_select_text">Set %1$s as your current host?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <!-- DeckSelectDialog -->
    <string name="deck_select_dialog_title">Select your target deck</string>


    <!-- WordOptionsDialog -->
    <string name="word_options_dialog_title">Include the following options</string>


    <!-- ServerErrorDialog -->
    <string name="error_dialog_title">Error Description:</string>
    <string name="apache_server_down">Your apache/nginx server is down. \n
        Causes: \n
        1. The apache/nginx service on your server host is not running</string>
    <string name="apache_server_unreachable">Your apache/nginx server is unreachable. \n
    Causes: \n
        1. The currently selected host is unreachable or does not even exist
    </string>
    <string name="anki_server_down">Your Anki server is down.\n
        Causes: \n
        1. Anki is not running on the target server \n
        2. Anki connect has not been installed</string>
    <string name="other_server_error">Something internal with AnkiConnect has gone wrong.</string>
    <string name="anki_connect_error">Response from AnkiConnect Service: \n</string>
    <string name="api_error">An error occurred at the currently selected API: \n</string>


    <!-- WordOptionsDialog -->
    <string name="everything">Everything</string>
    <string name="deselect_all">Deselect All</string>

    <!-- APIs NOTE: If you edit this, also edit the order of APIs:Json_Keys to reflect the order here-->
    <string-array name="apis">
        <item>Words</item>
        <item>None</item>
    </string-array>

</resources>
