<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <EditText
        android:id="@+id/vocab_word_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/card_vocab_hint"
        android:gravity="center"
        android:inputType="text"
        android:maxLines="1"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/back_of_card_note"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/back_card_note"
        android:gravity="center"
        android:inputType="text"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/main_fragment_tags_edit_text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tags"
        android:gravity="center"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="8dp">

        <Button
            android:id="@+id/current_deck_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="4dp"
            android:padding="16dp"
            android:background="@android:drawable/dialog_holo_light_frame"
            android:text="@string/no_deck_selected"
            android:textColor="@android:color/black"
            android:textSize="18sp" />

        <Button
            android:id="@+id/get_decks_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/get_decks_button"/>
    </LinearLayout>

    <Spinner
        android:id="@+id/api_spinner"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/options_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/options_button"
        android:layout_margin="8dp"/>

    <Button
        android:id="@+id/submit_word_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/submit_button"
        android:layout_margin="8dp"/>

    <CheckBox
        android:id="@+id/send_to_queue_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkbox_send_to_queue" />
</LinearLayout>